# tropical-synth

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: advanced.rs  basic.rs  tutorial.rs
src/: error.rs  lib.rs  midi.rs  morph.rs  patch.rs  polynomial.rs  semiring.rs  timbre.rs
