[package]
name = "tropical-synth"
version = "0.1.0"
edition = "2021"
description = "Sound design via tropical geometry — draw a tropical curve, hear the sound"
license = "MIT"
repository = "https://github.com/SuperInstance/tropical-synth"
documentation = "https://docs.rs/tropical-synth"
readme = "README.md"
homepage = "https://github.com/SuperInstance/tropical-synth"
rust-version = "1.70"
keywords = ["tropical", "synth", "music", "geometry", "sound-design"]
categories = ["multimedia::audio", "mathematics"]

[dependencies]
serde = { version = "1", features = ["derive"] }
